--- a/package.json
+++ b/package.json
@@ -1,5 +1,19 @@
 {
+  "name": "alyticsync",
+  "version": "1.0.0",
+  "description": "Command line tool for editin Alytic.io cards",
+  "main": "main.js",
   "dependencies": {
-    "axios": "^0.18.0"
-  }
+    "axios": "^0.18.0",
+    "debug": "^3.1.0",
+    "follow-redirects": "^1.5.7",
+    "is-buffer": "^1.1.6",
+    "ms": "^2.0.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Filip Defar",
+  "license": "none"
 }
