Refactor `main.js` entry point to smaller files
- Extract all commands to their own folders
- Refactor command functions into pure functions
- Extract helpers to /helpers folders

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "alyticsync",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Command line tool for editing of Alytic.io cards",
   "main": "main.js",
   "bin": {
-    "alyticsync": "./bin.js"
+    "alyticsync": "./bin.js",
+    "alytic": "./bin.js"
   },
   "preferGlobal": true,
   "dependencies": {
